# feature_selection

./: .gitignore  README.md  config.json  main.py  pipeline_config.json  pyproject.toml
config/: fast_pipeline_config.json
examples/: exploration.ipynb  wrapper_example.ipynb
feature_selection/: .gitignore
feature_selection/config/: fast_pipeline_config2.json  pipeline_config.json
feature_selection/examples/: mRmR_example.ipynb
feature_selection/src/: data_loader.py  results.py  score_calculator.py
feature_selection/src/baseline/: __init__.py
feature_selection/src/evaluation/: evaluator.py
feature_selection/src/filter/: mRmR.py
feature_selection/src/pipeline/: __main__.py  config_schema.py  dashboard.py  runner.py
src/: LR_random_baseline.py  LR_regression_baseline.py  __init__.py  data_loader.py  exploration.ipynb  mRmR_example.ipynb  precomputation.py  preprocessing.py  results.py  score_matrix.py  wrapper_example.ipynb
src/evaluation/: __init__.py  logistic_regression.py
src/filter/: SymmetricUncertainty.py  __init__.py  mRmR.py
src/pipeline/: __init__.py  cache.py  cli.py  config_schema.py  dashboard.py  runner.py
src/wrapper/: MarkovBlanketWrapper.py  __init__.py
tests/: test_cache.py  test_integration.py
tools/: config_editor.html
